<resources>
    <string name="app_name">Semana03DPAFragments</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="val_text_principal">Fragmentos en Android</string>
    <string name="valetfullname">Nombre completo</string>
    <string name="valetemail">Correo electrónico</string>
    <string name="valrbtmale">Male</string>
    <string name="valrbtfemale">Female</string>
    <string name="valrbtothers">Others</string>
    <string name="valbtnsave">SAVE</string>
    <string-array name="country_array">
        <item>Brasil</item>
        <item>Argentina</item>
        <item>Uruguay</item>
        <item>Ecuador</item>
        <item>Perú</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Venezuela</item>
    </string-array>


</resources>