<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegistroFragment" >

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="246dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/valetfullname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="250dp"
        android:layout_height="81dp"
        android:layout_marginTop="8dp"
        android:hint="@string/valetemail"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:helperText="Required"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        app:passwordToggleEnabled="false"
        app:startIconDrawable="@android:drawable/sym_action_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="243dp"
        android:layout_height="146dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <RadioButton
            android:id="@+id/rbtMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtmale" />

        <RadioButton
            android:id="@+id/rbtFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtfemale" />

        <RadioButton
            android:id="@+id/rbtOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtothers" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spnCountry"
        android:layout_width="238dp"
        android:layout_height="49dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="236dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="@string/valbtnsave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCountry" />
</androidx.constraintlayout.widget.ConstraintLayout>